[package]
name = "ratboy"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.l>
[profile.dev]
opt.level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_rapier2d = "0.30.0"
bevy_stdin = "0.3.0"
crossterm = "0.29.0"
